--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.23.0",
     "openai": "^3.3.0",
     "pdfjs-dist": "^3.7.107",
