--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "emailjs-com": "^3.2.0",
-    "firebase": "^9.23.0",
-    "openai": "^3.3.0",
-    "pdfjs-dist": "^3.7.107",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.0",
-    "styled": "^1.0.0",
-    "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4"
-  },
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "axios": "latest",
+    "@emailjs/browser": "latest",
+    "firebase": "latest",
+    "openai": "latest",
+    "pdfjs-dist": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest",
+    "react-syntax-highlighter": "latest",
+    "react-textarea-autosize": "latest",
+    "styled": "latest",
+    "styled-components": "latest",
+    "web-vitals": "latest"
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
